# Operating-System-Labs

./: .gitignore  CMakeLists.txt  README.md  a.out  build.cmd  build.sh  com.c  db_filler.c  emulator.c  example.c  log.c  main.c  main_tmp.c  sem.c  server.c  shared_mem.c  test.c  threads.c
com/: com.c
db/: db.c
frontend/: index.html  script.js  styles.css
include/: com.h  db.h  measurement.h
sql/: temperature.sql
